<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Categories"
    tools:showIn="@layout/activity_categories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_height" />

        <Button
            android:id="@+id/b_appetizer"
            android:layout_width="235dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="33dp"
            android:layout_marginRight="74dp"
            android:background="@android:color/background_light"
            android:onClick="appetizer"
            android:text="@string/appetizer" />

        <Button
            android:id="@+id/b_breakfast"
            android:layout_width="235dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="33dp"
            android:layout_marginRight="74dp"
            android:background="@android:color/background_light"
            android:onClick="breakfast"
            android:text="@string/breakfast" />


        <Button
            android:id="@+id/b_soup"
            android:layout_width="235dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="33dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:onClick="soup"
            android:text="@string/soup" />

        <Button
            android:id="@+id/b_salad"
            android:layout_width="235dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="33dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:onClick="salad"
            android:text="@string/salad" />

        <Button
            android:id="@+id/b_drinks"
            android:layout_width="235dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="33dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:onClick="drinks"
            android:text="@string/drinks" />

        <Button
            android:id="@+id/b_dessert"
            android:layout_width="235dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="33dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:onClick="dessert"
            android:text="@string/dessert" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_bottom" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>